# P4OC

./: .gitignore  1export  AGENTS.md  FEATURE_PROPOSAL.md  README.md  build.gradle.kts  build_output.txt  gradle.properties  mise.toml
.github/workflows/: build.yml
.opencode/skills/: play-release.md
.tickets/: oa-s3kb.md  oa-trco.md  oa-vcaf.md  oa-wmrj.md
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/animation/: animation_engine.cpp  jni_bridge.cpp
app/src/main/cpp/buffer/: jni_bridge.cpp  message_buffer.cpp
app/src/main/cpp/include/animation/: animation_engine.h  easing.h
app/src/main/cpp/include/buffer/: lock_free_queue.h  message_buffer.h
app/src/main/cpp/include/mdns/: ip_utils.h  service_cache.h
app/src/main/cpp/include/memory/: pressure_classifier.h
app/src/main/cpp/include/pool/: connection_registry.h
app/src/main/cpp/include/pty/: output_buffer.h  reconnection_manager.h
app/src/main/cpp/include/scroll/: scroll_physics.h
app/src/main/cpp/include/sse/: event_buffer.h
app/src/main/cpp/mdns/: ip_utils.cpp  jni_bridge.cpp  service_cache.cpp
app/src/main/cpp/memory/: jni_bridge.cpp  pressure_classifier.cpp
app/src/main/cpp/pool/: connection_registry.cpp  jni_bridge.cpp
app/src/main/cpp/pty/: jni_bridge.cpp  output_buffer.cpp  reconnection_manager.cpp
app/src/main/cpp/scroll/: jni_bridge.cpp
app/src/main/cpp/sse/: event_buffer.cpp  jni_bridge.cpp
app/src/main/java/dev/blazelight/p4oc/: MainActivity.kt  PocketCodeApp.kt
app/src/main/java/dev/blazelight/p4oc/core/datastore/: SettingsDataStore.kt
app/src/main/java/dev/blazelight/p4oc/core/debug/: CrashReporter.kt
app/src/main/java/dev/blazelight/p4oc/core/log/: AppLog.kt
app/src/main/java/dev/blazelight/p4oc/core/messaging/: SmartMessageManager.kt
app/src/main/java/dev/blazelight/p4oc/core/network/: ConnectionManager.kt  MdnsDiscoveryManager.kt  NativeMdnsSupport.kt  NativePtySupport.kt  NativeSseSupport.kt  OpenCodeApi.kt  OpenCodeEventSource.kt  PtyWebSocketClient.kt  SessionDataCache.kt
app/src/main/java/dev/blazelight/p4oc/core/notification/: NotificationEventObserver.kt
app/src/main/java/dev/blazelight/p4oc/core/performance/: AnimationOptimizer.kt  ConnectionPool.kt  MainThreadWatchdog.kt  MemoryManager.kt  MessageBuffer.kt  NativeAnimationOptimizer.kt  NativeConnectionPool.kt  NativeFlingBehavior.kt  NativeMemorySupport.kt  (+7 more)
app/src/main/java/dev/blazelight/p4oc/di/: KoinModules.kt
app/src/main/java/dev/blazelight/p4oc/terminal/: PtyTerminalClient.kt
app/src/main/res/values/: strings.xml  themes.xml
core/performance/: MemoryManager.kt  PerformanceOptimizer.kt  PredictiveOptimizer.kt
gradle/: libs.versions.toml
macrobenchmark/src/androidTest/java/dev/blazelight/p4oc/benchmark/: GenerateBaselineProfile.kt
scripts/: enhanced_theme_validation.sh
(+79 files in other folders)
